--- a/light.css
+++ b/light.css
@@ -1,8 +1,16 @@
 :root{
-    --school-bus-yellow: #FDE131ff;
-    --black: #030204ff;
     --background: rgb(248, 245, 237);
-    --jet: #333332ff;
-    --silver: #B8B5B2ff;
+    --dot-background: rgba(248, 245, 237,0.9);
     --text-color: #444;
+    --card-background: rgb(243, 236, 218);
+}
+
+.flip {
+    transition: transform 0.5s ease-in-out;
+    transform: scale(0.8)
+}
+
+.down-arrow {
+  margin: 0 auto;
+  transform: rotate(180deg);
 }
